--- a/apps/my-pets/tsconfig.json
+++ b/apps/my-pets/tsconfig.json
@@ -1,19 +1,34 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "./.svelte-kit/tsconfig.json",
+	"display": "Default",
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
+
 		"strict": true,
-		"moduleResolution": "bundler"
-	}
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	// except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+
+		"allowSyntheticDefaultImports": true,
+		"isolatedModules": true,
+
+		"useUnknownInCatchVariables": true,
+		"preserveValueImports": false,
+		"noImplicitAny": true,
+		"noEmitOnError": false,
+		"importsNotUsedAsValues": "remove",
+		"noImplicitReturns": true,
+		"importHelpers": true,
+		"allowUnusedLabels": false,
+		"resolveJsonModule": true
+	},
+	"include": [
+		"src/**/*.d.ts",
+		"src/**/*.ts",
+		"src/**/*.js",
+		"src/**/*.svelte",
+		"api/**/*.ts",
+		"../../global.d.ts",
+		".svelte-kit/ambient.d.ts"
+	],
+	"exclude": ["node_modules"]
 }
