--- a/apps/my-pets/package.json
+++ b/apps/my-pets/package.json
@@ -12,16 +12,20 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"typesafe-i18n": "typesafe-i18n"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@skeletonlabs/skeleton": "^2.10.0",
+		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.3.1",
 		"@sveltejs/kit": "^1.30.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
+		"daisyui": "^4.11.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -33,7 +37,7 @@
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.4.5",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^4.4.2",
 		"vitest": "^1.2.0"
@@ -79,8 +83,8 @@
 		"filepond": "^4.30.4",
 		"filerobot-image-editor": "^4.5.2",
 		"firebase": "^10.2.0",
-		"flowbite": "^2.2.0",
-		"flowbite-svelte": "0.44.19",
+		"flowbite": "^2.3.0",
+		"flowbite-svelte": "0.46.1",
 		"flowbite-svelte-icons": "^0.4.4",
 		"geolocation-utils": "^1.2.5",
 		"i18next": "^23.7.6",
@@ -122,6 +126,6 @@
 		"turf": "^3.0.14",
 		"typesafe-i18n": "5.26.0",
 		"web-push": "^3.6.4",
-		"zod": "3.21.4"
+		"zod": "^3.23.8"
 	}
 }
