--- a/apps/my-pets-api/package.json
+++ b/apps/my-pets-api/package.json
@@ -29,7 +29,7 @@
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
 		"type-fest": "^4.9.0",
-		"typescript": "^5.3.2",
+		"typescript": "5.4.5",
 		"vitest": "^0.34.6"
 	},
 	"dependencies": {
