--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -33,6 +33,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"graphql-codegen-svelte-apollo": "^1.1.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -40,7 +41,7 @@
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.4.5",
+		"typescript": "5.4.5",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^4.4.2",
 		"vitest": "^1.2.0"
