--- a/packages/appwrite-permissions/package.json
+++ b/packages/appwrite-permissions/package.json
@@ -28,7 +28,7 @@
 		"rollup": "^4.6.0",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
-		"typescript": "^5.3.2"
+		"typescript": "5.4.5"
 	},
 	"dependencies": {
 		"appwrite": "^13.0.1"
