--- a/packages/appwrite-ssr-graphql/package.json
+++ b/packages/appwrite-ssr-graphql/package.json
@@ -25,7 +25,7 @@
 		"@types/set-cookie-parser": "^2.4.3",
 		"dependency-check": "^4.1.0",
 		"tslib": "^2.6.2",
-		"typescript": "^5.3.2"
+		"typescript": "5.4.5"
 	},
 	"dependencies": {
 		"@repo/appwrite-permissions": "*",
