--- a/apps/my-pets-api/package.json
+++ b/apps/my-pets-api/package.json
@@ -33,6 +33,7 @@
 		"vitest": "^0.34.6"
 	},
 	"dependencies": {
+		"@repo/cloudinary-server": "*",
 		"@repo/my-pets-tstypes": "*",
 		"@repo/appwrite-permissions": "*",
 		"@repo/appwrite-ssr-graphql": "*",
