--- a/apps/my-pets-api/tsconfig.json
+++ b/apps/my-pets-api/tsconfig.json
@@ -3,10 +3,7 @@
 	"compilerOptions": {
 		"outDir": "dist",
 		"rootDir": "src",
-		"module": "CommonJS",
-		"esModuleInterop": true,
-		"target": "es6",
-		"moduleResolution": "node"
+		"module": "CommonJS"
 	},
 
 	"include": [
