--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -22,6 +22,7 @@
 		"@skeletonlabs/skeleton": "^2.10.0",
 		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/adapter-vercel": "^5.3.1",
 		"@sveltejs/kit": "^1.30.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
