--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/adapter-vercel": "^5.3.1",
 		"@sveltejs/kit": "^1.30.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/cookie": "^0.6.0",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"codegen": "^0.1.0",
@@ -40,6 +41,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-language-server": "^0.16.10",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "5.4.5",
@@ -81,6 +83,7 @@
 		"canvas-txt": "^4.1.1",
 		"cloudinary": "^1.40.0",
 		"compressorjs": "^1.2.1",
+		"cookie": "^0.6.0",
 		"cors": "^2.8.5",
 		"cropperjs": "^1.6.1",
 		"date-fns": "^2.30.0",
