--- a/apps/my-pets-api/Dockerfile
+++ b/apps/my-pets-api/Dockerfile
@@ -11,7 +11,7 @@ RUN apk update
 WORKDIR /app
 RUN yarn global add turbo
 COPY . .
-RUN turbo prune --scope=api --docker
+RUN turbo prune --scope=my-pets-api --docker
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
@@ -38,7 +38,7 @@ COPY turbo.json turbo.json
 # ARG TURBO_TOKEN
 # ENV TURBO_TOKEN=$TURBO_TOKEN
 
-RUN yarn turbo run build --filter=api...
+RUN yarn turbo run build --filter=dev-pets-api...
 
 FROM base AS runner
 WORKDIR /app
@@ -49,4 +49,4 @@ RUN adduser --system --uid 1001 expressjs
 USER expressjs
 COPY --from=installer /app .
 
-CMD node apps/api/dist/index.js
+CMD node apps/dev-pets-api/dist/index.js
