--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -51,7 +51,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@repo/appwrite-ssr-graphql": "*",
+		"@repo/utils": "*",
 		"@repo/appwrite-client": "*",
+		"@repo/appwrite-types": "*",
+		"@repo/my-pets-types": "*",
+		"@repo/ts-types": "*",
 		"@apollo/client": "^3.8.2",
 		"@cloudinary/url-gen": "^1.11.2",
 		"@graphql-codegen/typescript-graphql-request": "^5.0.0",
@@ -62,7 +67,6 @@
 		"@pqina/pintura": "^8.62.0",
 		"@pqina/svelte-pintura": "^9.0.1",
 		"@repo/my-pets-tstypes": "*",
-		"@repo/utils": "*",
 		"@skeletonlabs/skeleton": "^2.9.0",
 		"@splidejs/svelte-splide": "^0.2.9",
 		"@sveltestack/svelte-query": "^1.6.0",
