--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -55,7 +55,7 @@
 		"@repo/utils": "*",
 		"@repo/appwrite-client": "*",
 		"@repo/appwrite-types": "*",
-		"@repo/my-pets-types": "*",
+		"@repo/my-pets-tsTypes": "*",
 		"@repo/ts-types": "*",
 		"@apollo/client": "^3.8.2",
 		"@cloudinary/url-gen": "^1.11.2",
@@ -66,7 +66,6 @@
 		"@onsvisual/svelte-maps": "^1.1.6",
 		"@pqina/pintura": "^8.62.0",
 		"@pqina/svelte-pintura": "^9.0.1",
-		"@repo/my-pets-tstypes": "*",
 		"@skeletonlabs/skeleton": "^2.9.0",
 		"@splidejs/svelte-splide": "^0.2.9",
 		"@sveltestack/svelte-query": "^1.6.0",
