--- a/packages/appwrite-types/package.json
+++ b/packages/appwrite-types/package.json
@@ -23,10 +23,12 @@
 	"devDependencies": {
 		"@types/node": "^18.15.11",
 		"barrelsby": "^2.8.0",
+		"dependency-check": "^4.1.0",
 		"rollup": "3.20.2",
 		"ts-node": "^10.9.1",
-		"typescript": "5.4.5",
-		"dependency-check": "^4.1.0"
+		"typescript": "5.4.5"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"zod": "^3.23.8"
+	}
 }
