--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,36 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode" // enable Prettier formatter for JavaScript files
 	},
 	"editor.fontFamily": "Fira Code",
-	"editor.fontLigatures": true
+	"editor.fontLigatures": true,
+	"restoreTerminals.runOnStartup": true,
+	"restoreTerminals.terminals": [
+		{
+			"splitTerminals": [
+				{
+					"name": "mypets-web",
+					"commands": ["yarn dev-pets-web"]
+				},
+				{
+					"name": "mypets-api",
+					"commands": ["yarn dev-pets-api"]
+				}
+			]
+		},
+		{
+			"splitTerminals": [
+				{
+					"name": "i18n",
+					"commands": ["cd apps/my-pets-web", "yarn typesafe-i18n"]
+				},
+				{
+					"name": "web",
+					"commands": ["cd apps/my-pets-web", "clear"]
+				},
+				{
+					"name": "api",
+					"commands": ["cd apps/my-pets-api", "clear"]
+				}
+			]
+		}
+	]
 }
