--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "turborepo",
 	"private": true,
 	"scripts": {
-		"build": "turbo build",
+		"build": "turbo run build --force",
 		"dev": "turbo dev",
 		"dev-pets-web": "dotenv -e .env -- turbo dev --filter=my-pets-web ",
 		"dev-pets-api": "dotenv -e .env -- turbo dev --filter=my-pets-api ",
