--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -18,6 +18,8 @@
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.2",
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.81.0",
 		"@playwright/test": "^1.28.1",
 		"@skeletonlabs/skeleton": "^2.10.0",
 		"@skeletonlabs/tw-plugin": "^0.4.0",
@@ -82,7 +84,7 @@
 		"@types/w3c-image-capture": "^1.0.8",
 		"@urql/svelte": "^4.0.4",
 		"@vercel/analytics": "^1.2.2",
-		"appwrite": "^13.0.0",
+		"appwrite": "^13.0.1",
 		"bits-ui": "^0.21.10",
 		"browser-image-compression": "^2.0.2",
 		"bytemd": "^1.21.0",
