--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"eslint-config": "*",
 		"tsconfig": "*",
 		"prettier": "^3.2.5",
-		"turbo": "latest",
+		"turbo": "1.6.3",
 		"dotenv-cli": "latest"
 	},
 	"engines": {
