--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -144,6 +144,7 @@
 		"svelte-routing": "^1.6.0",
 		"svelte-tel-input": "^3.3.9",
 		"sveltekit-i18n": "^2.4.2",
+		"sveltekit-search-params": "^2.1.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"tough-cookie": "^4.1.3",
