--- a/apps/my-pets-web/tsconfig.json
+++ b/apps/my-pets-web/tsconfig.json
@@ -10,6 +10,7 @@
 
 		"allowSyntheticDefaultImports": true,
 		"isolatedModules": true,
+		"forceConsistentCasingInFileNames": true,
 
 		"useUnknownInCatchVariables": true,
 		"preserveValueImports": false,
