--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -29,6 +29,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/cookie": "^0.6.0",
 		"@types/eslint": "^8.56.7",
+		"@types/qrcode": "^1.5.5",
 		"autoprefixer": "^10.4.19",
 		"codegen": "^0.1.0",
 		"daisyui": "^4.11.1",
