--- a/packages/appwrite-client/package.json
+++ b/packages/appwrite-client/package.json
@@ -20,11 +20,11 @@
 	},
 	"devDependencies": {
 		"@types/js-cookie": "^3.0.3",
-		"@types/node": "^18.15.11",
-		"ts-node": "^10.9.1",
-		"typescript": "5.4.5",
+		"@types/node": "^20.14.9",
+		"dependency-check": "^4.1.0",
 		"rollup": "^4.6.0",
-		"dependency-check": "^4.1.0"
+		"ts-node": "^10.9.1",
+		"typescript": "5.5.2"
 	},
 	"dependencies": {
 		"@repo/appwrite-permissions": "*",
@@ -32,7 +32,7 @@
 		"@repo/utils": "*",
 		"@types/tough-cookie": "^4.0.2",
 		"appwrite": "^15.0.0",
-		"axios-cookiejar-support": "^4.0.7",
+		"axios-cookiejar-support": "^5.0.2",
 		"js-cookie": "^3.0.5",
 		"lodash": "^4.17.21",
 		"svelte-appwrite-client": "latest",
