--- a/packages/cloudinary-server/package.json
+++ b/packages/cloudinary-server/package.json
@@ -22,13 +22,13 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.26.2",
-		"@types/node": "^18.15.11",
+		"@types/node": "^20.14.9",
 		"@types/set-cookie-parser": "^2.4.3",
-		"typescript": "5.4.5",
-		"rollup": "^4.6.0"
+		"rollup": "^4.6.0",
+		"typescript": "5.5.2"
 	},
 	"dependencies": {
-		"cloudinary": "^2.2.0",
-		"@repo/ts-types": "*"
+		"@repo/ts-types": "*",
+		"cloudinary": "^2.2.0"
 	}
 }
