--- a/packages/ts-types/package.json
+++ b/packages/ts-types/package.json
@@ -21,12 +21,12 @@
 		"check-missing-dependencies": "npx dependency-check package.json src/**/* --missing"
 	},
 	"devDependencies": {
-		"@types/node": "^18.15.11",
+		"@types/node": "^20.14.9",
 		"barrelsby": "^2.8.0",
-		"rollup": "3.20.2",
+		"dependency-check": "^4.1.0",
+		"rollup": "4.18.0",
 		"ts-node": "^10.9.1",
-		"typescript": "5.4.5",
-		"dependency-check": "^4.1.0"
+		"typescript": "5.5.2"
 	},
 	"dependencies": {
 		"zod": "^3.22.4"
