--- a/apps/my-pets-api/package.json
+++ b/apps/my-pets-api/package.json
@@ -33,11 +33,11 @@
 	},
 	"dependencies": {
 		"@cloudinary/url-gen": "^1.15.0",
-		"@repo/appwrite-permissions": "*",
-		"@repo/appwrite-ssr-graphql": "*",
-		"@repo/cloudinary-server": "*",
-		"@repo/my-pets-tstypes": "*",
-		"@repo/utils": "*",
+		"@repo/appwrite-permissions": "workspace:*",
+		"@repo/appwrite-ssr-graphql": "workspace:*",
+		"@repo/cloudinary-server": "workspace:*",
+		"@repo/my-pets-tstypes": "workspace:*",
+		"@repo/utils": "workspace:*",
 		"@types/cookie-parser": "^1.4.3",
 		"apollo-server-express": "^3.12.1",
 		"appwrite": "^15.0.0",
@@ -55,7 +55,7 @@
 		"node-appwrite": "^13.0.0",
 		"pexels": "^1.4.0",
 		"sharp": "^0.33.1",
-		"tsconfig": "*",
+		"tsconfig": "workspace:*",
 		"vite-plugin-node": "^3.0.2",
 		"web-push": "^3.6.7",
 		"wikipedia": "^2.1.1"
