--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
 
 	"editor.fontFamily": "Fira Code",
 	"editor.fontLigatures": true,
-	"restoreTerminals.runOnStartup": true,
+	"restoreTerminals.runOnStartup": false,
 	"restoreTerminals.terminals": [
 		{
 			"splitTerminals": [
