--- a/packages/cloudinary-server/package.json
+++ b/packages/cloudinary-server/package.json
@@ -28,7 +28,7 @@
 		"typescript": "5.5.2"
 	},
 	"dependencies": {
-		"@repo/ts-types": "*",
+		"@repo/ts-types": "workspace:*",
 		"cloudinary": "^2.2.0"
 	}
 }
