--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "svelte-kit sync && vite build --output public",
+		"build": "svelte-kit sync && vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -63,12 +63,12 @@
 		"@onsvisual/svelte-maps": "^1.1.6",
 		"@pqina/pintura": "^8.62.0",
 		"@pqina/svelte-pintura": "^9.0.1",
-		"@repo/appwrite-client": "workspace:*",
-		"@repo/appwrite-ssr-graphql": "workspace:*",
-		"@repo/appwrite-types": "workspace:*",
-		"@repo/my-pets-tstypes": "workspace:*",
-		"@repo/ts-types": "workspace:*",
-		"@repo/utils": "workspace:*",
+		"@repo/appwrite-client": "*",
+		"@repo/appwrite-ssr-graphql": "*",
+		"@repo/appwrite-types": "*",
+		"@repo/my-pets-tstypes": "*",
+		"@repo/ts-types": "*",
+		"@repo/utils": "*",
 		"@skeletonlabs/skeleton": "^2.10.0",
 		"@splidejs/svelte-splide": "^0.2.9",
 		"@sveltestack/svelte-query": "^1.6.0",
