--- a/apps/my-pets-web/tsconfig.json
+++ b/apps/my-pets-web/tsconfig.json
@@ -5,7 +5,6 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
-		"baseUrl": ".",
 		"strict": true,
 
 		"allowSyntheticDefaultImports": true,
@@ -20,15 +19,7 @@
 		"noImplicitReturns": true,
 		"importHelpers": true,
 		"allowUnusedLabels": false,
-		"resolveJsonModule": true,
-		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"],
-			"$src": ["src"],
-			"$src/*": ["src/*"],
-			"$routes": ["src/routes"],
-			"$routes/*": ["src/routes/*"]
-		}
+		"resolveJsonModule": true
 	},
 	"include": [
 		"src/**/*.d.ts",
