--- a/apps/my-pets-api/package.json
+++ b/apps/my-pets-api/package.json
@@ -5,14 +5,14 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"dev": "console-ninja nodemon -w *.ts -e ts -x ts-node --files -H -T src/index.ts",
-		"prebuild": "yarn barrelsby && yarn generate-graphql-schema",
+		"prebuild": "pnpm barrelsby && pnpm generate-graphql-schema",
 		"build": "tsc -build",
 		"generate-graphql-schema": "ts-node  ./src/schema.ts",
 		"generate-schema-barrels": "barrelsby --delete --exportDefault --singleQuotes --directory ./src/schema",
 		"generate-resolvers-barrels": "barrelsby --delete --exportDefault --singleQuotes --directory ./src/resolvers",
 		"generate-types-barrels": "barrelsby --delete --exportDefault --singleQuotes --directory ./src/graphqlTypes/",
 		"generate-database-barrels": "barrelsby --delete  --singleQuotes --directory ./src/lib/database/",
-		"barrelsby": "yarn generate-types-barrels && yarn generate-schema-barrels && yarn generate-resolvers-barrels",
+		"barrelsby": "pnpm generate-types-barrels && pnpm generate-schema-barrels && pnpm generate-resolvers-barrels",
 		"start": "node --experimental-modules ./dist/esm/index.js",
 		"preview": ""
 	},
@@ -33,11 +33,11 @@
 	},
 	"dependencies": {
 		"@cloudinary/url-gen": "^1.15.0",
-		"@repo/appwrite-permissions": "workspace:*",
-		"@repo/appwrite-ssr-graphql": "workspace:*",
-		"@repo/cloudinary-server": "workspace:*",
-		"@repo/my-pets-tstypes": "workspace:*",
-		"@repo/utils": "workspace:*",
+		"@repo/appwrite-permissions": "*",
+		"@repo/appwrite-ssr-graphql": "*",
+		"@repo/cloudinary-server": "*",
+		"@repo/my-pets-tstypes": "*",
+		"@repo/utils": "*",
 		"@types/cookie-parser": "^1.4.3",
 		"apollo-server-express": "^3.12.1",
 		"appwrite": "^15.0.0",
@@ -55,7 +55,7 @@
 		"node-appwrite": "^13.0.0",
 		"pexels": "^1.4.0",
 		"sharp": "^0.33.1",
-		"tsconfig": "workspace:*",
+		"tsconfig": "*",
 		"vite-plugin-node": "^3.0.2",
 		"web-push": "^3.6.7",
 		"wikipedia": "^2.1.1"
