--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
 		"dev": "turbo dev",
 		"dev-pets-web": "dotenv -e .env -- turbo dev --filter=my-pets-web ",
 		"dev-pets-api": "dotenv -e .env -- turbo dev --filter=my-pets-api ",
-		"dev-pets-portfolio": "dotenv -e .env -- turbo dev --filter=my-pets-portfolio ",
-		"preinstall": "npx only-allow pnpm",
+		"dev-pets-portfolio": "dotenv -e .env -- turbo dev --filter=my-pets-portfolio",
 		"lint": "turbo lint",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\""
 	},
 	"devDependencies": {
 		"dotenv-cli": "latest",
-		"eslint-config": "workspace:*",
+		"eslint-config": "*",
 		"prettier": "^3.2.5",
-		"tsconfig": "workspace:*",
+		"tsconfig": "*",
 		"turbo": "2.0.5"
 	},
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@9.4.0",
+	"packageManager": "yarn@1.22.22",
 	"workspaces": [
 		"apps/*",
 		"packages/*"
