--- a/packages/appwrite-permissions/package.json
+++ b/packages/appwrite-permissions/package.json
@@ -16,7 +16,7 @@
 		"build": "npm run build:types && npm run build:libs",
 		"build:libs": "rollup -c",
 		"build:types": "tsc --declaration --emitDeclarationOnly --outDir dist/types",
-		"prebuild": "yarn barrelsby && yarn check-missing-dependencies",
+		"prebuild": "pnpm barrelsby && pnpm check-missing-dependencies",
 		"barrelsby": "barrelsby --delete --singleQuotes --directory ./src",
 		"check-missing-dependencies": "npx dependency-check package.json src/**/* --missing"
 	},
