--- a/packages/my-pets-tsTypes/package.json
+++ b/packages/my-pets-tsTypes/package.json
@@ -16,7 +16,7 @@
 		"build": "npm run build:types && npm run build:libs",
 		"build:libs": "rollup -c",
 		"build:types": "tsc --declaration --emitDeclarationOnly --outDir dist/types",
-		"prebuild": "yarn barrelsby && yarn  check-missing-dependencies",
+		"prebuild": "pnpm barrelsby && pnpm  check-missing-dependencies",
 		"barrelsby": "barrelsby --delete  --singleQuotes --directory ./src",
 		"check-missing-dependencies": "npx dependency-check package.json src/**/* --missing"
 	},
@@ -29,8 +29,8 @@
 		"typescript": "5.5.2"
 	},
 	"dependencies": {
-		"@repo/appwrite-types": "workspace:*",
-		"@repo/ts-types": "workspace:*",
+		"@repo/appwrite-types": "*",
+		"@repo/ts-types": "*",
 		"zod": "^3.22.4"
 	}
 }
