--- a/apps/my-pets-portfolio/package.json
+++ b/apps/my-pets-portfolio/package.json
@@ -2,6 +2,7 @@
 	"name": "my-pets-portfolio",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -23,9 +24,12 @@
 		"next": "14.2.5",
 		"next-i18next": "^15.3.0",
 		"ni18n": "^1.1.0",
+		"nookies": "^2.5.2",
 		"react": "^18",
+		"react-cookie": "^7.1.4",
 		"react-dom": "^18",
 		"react-i18next": "^15.0.0",
+		"react-icons": "^5.2.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
