--- a/apps/my-pets-portfolio/tsconfig.json
+++ b/apps/my-pets-portfolio/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"extends": "../../packages/tsconfig/base.json",
 	"compilerOptions": {
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
@@ -12,11 +13,6 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"incremental": true,
-		"plugins": [
-			{
-				"name": "next"
-			}
-		],
 		"paths": {
 			"@/*": ["./src/*"]
 		}
@@ -25,9 +21,8 @@
 		"next-env.d.ts",
 		"**/*.ts",
 		"**/*.tsx",
-		".next/types/**/*.ts",
-		"next.config.mjs",
-		"next-i18next.config.js"
+		"../../tsReset.ts",
+		"../../global.ts"
 	],
 	"exclude": ["node_modules"]
 }
