--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	},
 	"packageManager": "yarn@1.22.22",
 	"workspaces": [
-		"apps/*",
+		"apps/my-pets-portfolio",
+		"apps/my-pets-api",
+		"apps/my-pets-web",
 		"packages/*"
 	]
 }
