--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,7 +8,7 @@
 		".": {
 			"import": "./dist/esm/index.js",
 			"require": "./dist/cjs/index.js",
-			"types": "./dist/types/index.d.ts"
+			"types": "./src/index.ts"
 		},
 		"./package.json": "./package.json"
 	},
