--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"apps/my-pets-portfolio",
 		"apps/my-pets-api",
 		"apps/my-pets-web",
+		"apps/personal-otaprokopec-web",
 		"packages/*"
 	]
 }
