--- a/apps/personal-otaprokopec-web/package.json
+++ b/apps/personal-otaprokopec-web/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "personal-otaprokopec-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.4",
-    "@secretwpn/react-image-zoom": "^0.4.9",
-    "@types/react-responsive-masonry": "^2.1.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "flowbite-react": "^0.10.1",
-    "lightgallery": "^2.7.2",
-    "lucide-react": "^0.414.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-medium-image-zoom": "^5.2.8",
-    "react-responsive-masonry": "^2.2.1",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
-  }
+	"name": "personal-otaprokopec-web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@repo/utils": "*",
+		"@emotion/react": "^11.13.0",
+		"@emotion/styled": "^11.13.0",
+		"@mui/material": "^5.16.4",
+		"@secretwpn/react-image-zoom": "^0.4.9",
+		"@types/react-responsive-masonry": "^2.1.3",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"flowbite-react": "^0.10.1",
+		"lightgallery": "^2.7.2",
+		"lucide-react": "^0.414.0",
+		"next": "14.2.5",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-medium-image-zoom": "^5.2.8",
+		"react-responsive-masonry": "^2.2.1",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	},
+	"peerDependencies": {
+		"react": "^17.0.0 || ^18.0.0",
+		"react-dom": "^17.0.0 || ^18.0.0"
+	}
 }
