--- a/apps/personal-otaprokopec-web/package.json
+++ b/apps/personal-otaprokopec-web/package.json
@@ -20,10 +20,11 @@
 		"flowbite-react": "^0.10.1",
 		"lightgallery": "^2.7.2",
 		"lucide-react": "^0.414.0",
-		"next": "14.2.5",
+		"next": "^14.2.5",
 		"next-cloudinary": "^6.6.2",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.2.1",
 		"react-medium-image-zoom": "^5.2.8",
 		"react-responsive-masonry": "^2.2.1",
 		"swiper": "^11.1.7",
