--- a/apps/my-pets-portfolio/package.json
+++ b/apps/my-pets-portfolio/package.json
@@ -14,7 +14,7 @@
 		"@emotion/styled": "^11.11.5",
 		"@mui/material": "^5.16.3",
 		"@radix-ui/react-slot": "^1.1.0",
-		"@repo/utils": "*",
+		"@repo/utils": "workspace:*",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"flowbite-react": "^0.10.1",
