--- a/apps/personal-otaprokopec-web/package.json
+++ b/apps/personal-otaprokopec-web/package.json
@@ -12,7 +12,7 @@
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
 		"@mui/material": "^5.16.4",
-		"@repo/utils": "*",
+		"@repo/utils": "workspace:*",
 		"@secretwpn/react-image-zoom": "^0.4.9",
 		"@types/react-responsive-masonry": "^2.1.3",
 		"class-variance-authority": "^0.7.0",
@@ -29,7 +29,8 @@
 		"react-responsive-masonry": "^2.2.1",
 		"swiper": "^11.1.7",
 		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"use-local-storage": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
