--- a/apps/my-pets-api/package.json
+++ b/apps/my-pets-api/package.json
@@ -23,6 +23,7 @@
 		"@types/express": "^4.17.17",
 		"@types/gm": "^1.25.4",
 		"@types/http-server": "^0.12.1",
+		"@types/lodash": "^4.14.202",
 		"barrelsby": "^2.8.0",
 		"nodemon": "3.1.4",
 		"ts-node": "^10.9.1",
@@ -39,6 +40,7 @@
 		"@repo/my-pets-tstypes": "workspace:*",
 		"@repo/utils": "workspace:*",
 		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.17",
 		"apollo-server-express": "^3.12.1",
 		"appwrite": "^15.0.0",
 		"cloudinary": "^2.2.0",
