--- a/apps/my-pets-api/tsconfig.json
+++ b/apps/my-pets-api/tsconfig.json
@@ -3,7 +3,9 @@
 	"compilerOptions": {
 		"outDir": "dist",
 		"rootDir": "src",
-		"module": "CommonJS"
+		"module": "CommonJS",
+		"declaration": false,
+		"declarationMap": false
 	},
 
 	"include": [
