--- a/apps/my-pets-portfolio/package.json
+++ b/apps/my-pets-portfolio/package.json
@@ -31,7 +31,8 @@
 		"react-i18next": "^15.0.0",
 		"react-icons": "^5.2.1",
 		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
