--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -107,6 +107,7 @@
 		"flowbite-svelte-icons": "^1.6.1",
 		"geolocation-utils": "^1.2.5",
 		"graphql-request": "^6.1.0",
+		"graphql-tag": "^2.12.6",
 		"i18next": "^23.7.6",
 		"image-capture": "^0.4.0",
 		"jimp": "^0.22.10",
