--- a/packages/appwrite-client/package.json
+++ b/packages/appwrite-client/package.json
@@ -19,6 +19,7 @@
 		"check-missing-dependencies": "npx dependency-check package.json src/**/* --missing"
 	},
 	"devDependencies": {
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@types/js-cookie": "^3.0.3",
 		"@types/node": "^20.14.9",
 		"dependency-check": "^4.1.0",
