--- a/packages/appwrite-ssr-graphql/package.json
+++ b/packages/appwrite-ssr-graphql/package.json
@@ -20,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.26.2",
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@types/lodash": "^4.14.202",
 		"@types/node": "^20.14.9",
 		"@types/set-cookie-parser": "^2.4.3",
@@ -33,6 +34,7 @@
 		"appwrite": "^15.0.0",
 		"lodash": "^4.17.21",
 		"node-appwrite": "^13.0.0",
+		"rollup": "^4.19.0",
 		"set-cookie-parser": "^2.6.0",
 		"type-fest": "^4.9.0",
 		"zod": "^3.22.4"
