--- a/apps/personal-otaprokopec-web/package.json
+++ b/apps/personal-otaprokopec-web/package.json
@@ -19,6 +19,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"deep-object-diff": "^1.1.9",
+		"deep-object-diff-array": "^1.2.3",
 		"flowbite-react": "^0.10.1",
 		"framer-motion": "^11.3.4",
 		"lightgallery": "^2.7.2",
@@ -34,6 +35,7 @@
 		"swiper": "^11.1.7",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
+		"use-deep-compare-effect": "^1.8.1",
 		"use-local-storage": "^3.0.0",
 		"zod": "^3.23.8"
 	},
